force-app/main/default/objects/User_Story__c/fields/Client_Requester__c.field-meta.xml
<CustomField>
    <fullName>Client_Requester__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requested User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>