force-app/main/default/objects/User_Story__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>I want to &lt;goal to be accomplished&gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>