force-app/main/default/objects/User_Story__c/fields/Num_of_Work_Items__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Work_Items__c</fullName>
    <label>Num of Work Items</label>
    <summaryForeignKey>User_Story_Work_Item_Link__c.User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>