force-app/main/default/objects/User_Story__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>So that I can &lt;business outcome&gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>