force-app/main/default/objects/User_Story__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <formula>HYPERLINK(Id, &apos;As a &apos; +  Persona__r.Name + &apos;, I want to &apos; + Goal__c + &apos; so that I can &apos; +  Outcome__c , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Story</label>
    <type>Text</type>
</CustomField>