force-app/main/default/objects/User_Story__c/fields/User_Story_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Title__c</fullName>
    <formula>&apos;As a &apos; + Persona__r.Name + &apos;, I want to &apos; + Goal__c + &apos; so that I can &apos; + Outcome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Story</label>
    <type>Text</type>
</CustomField>